[25] JEP 511 Module Import Declarations
Final clean-up regarding graduation

Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3886